include/mcp/c_api/mcp_c_api.h

/* ============================================================================
 * Library Initialization & Cleanup
 * ============================================================================
 */

/**
 * Initialize the MCP library
 * Must be called before any other API functions
 * @param allocator Custom allocator (NULL for default)
 * @return MCP_OK on success
 */
mcp_result_t mcp_init(const mcp_allocator_t* allocator);
/**
 * Shutdown the MCP library
 * Cleans up all resources
 */
void mcp_shutdown(void);
/**
 * Get version string
 * @return Version string (do not free)
 */
const char* mcp_get_version(void);
/**
 * Get last error message for current thread
 * @return Error message (defined in mcp_c_types.h)
 */
/* const mcp_error_info_t* mcp_get_last_error(void) - defined in mcp_c_types.h
 */

/* ============================================================================
 * Event Loop & Dispatcher
 * ============================================================================
 */

/**
 * Create a new dispatcher (event loop)
 * @return Dispatcher handle or NULL on error
 */
mcp_dispatcher_t mcp_dispatcher_create(void);
/**
 * Run the dispatcher (blocks until stopped)
 * @param dispatcher Dispatcher handle
 * @return MCP_OK on success
 */
mcp_result_t mcp_dispatcher_run(mcp_dispatcher_t dispatcher);
/**
 * Stop the dispatcher
 * @param dispatcher Dispatcher handle
 */
void mcp_dispatcher_stop(mcp_dispatcher_t dispatcher);
/**
 * Destroy dispatcher
 * @param dispatcher Dispatcher handle
 */
void mcp_dispatcher_destroy(mcp_dispatcher_t dispatcher);
/**
 * Create a client connection (legacy, uses default configuration)
 * @param dispatcher Dispatcher handle
 * @param transport Transport type
 * @return Connection handle or NULL on error
 */
mcp_connection_t mcp_connection_create_client(mcp_dispatcher_t dispatcher,
                                              mcp_transport_type_t transport);
/**
 * Set connection callbacks
 * @param connection Connection handle
 * @param state_cb State change callback
 * @param data_cb Data received callback
 * @param error_cb Error callback
 * @param user_data User data for callbacks
 * @return MCP_OK on success
 */
mcp_result_t mcp_connection_set_callbacks(
    mcp_connection_t connection,
    mcp_connection_state_callback_t state_cb,
    mcp_data_callback_t data_cb,
    mcp_error_callback_t error_cb,
    void* user_data);
/**
 * Connect (async)
 * @param connection Connection handle
 * @return MCP_OK if connection started
 */
mcp_result_t mcp_connection_connect(mcp_connection_t connection);
/**
 * Write data (async)
 * @param connection Connection handle
 * @param data Data to write
 * @param length Data length
 * @param callback Write complete callback (optional)
 * @param user_data User data for callback
 * @return MCP_OK if write queued
 */
mcp_result_t mcp_connection_write(mcp_connection_t connection,
                                  const uint8_t* data,
                                  size_t length,
                                  mcp_write_callback_t callback,
                                  void* user_data);
/**
 * Close connection
 * @param connection Connection handle
 * @param flush Whether to flush pending writes
 * @return MCP_OK on success
 */
mcp_result_t mcp_connection_close(mcp_connection_t connection, bool flush);
/**
 * Destroy connection
 * @param connection Connection handle
 */
void mcp_connection_destroy(mcp_connection_t connection);
/* Commented out - conflicts with mcp_c_collections.h which uses const char* for
key mcp_result_t mcp_json_object_set(mcp_json_value_t object, mcp_string_t key,
                                 mcp_json_value_t value);
*/

/**
 * Parse JSON from string
 * @param json JSON string
 * @return JSON value handle or NULL on error
 */
mcp_json_value_t mcp_json_parse(mcp_string_t json);
/**
 * Release JSON value
 * @param value JSON value
 */
void mcp_json_release(mcp_json_value_t value);
/* ============================================================================
 * Utility Functions
 * ============================================================================
 */

/**
 * Create string from C string
 * @param str C string (can be NULL)
 * @return String structure
 */
mcp_string_t mcp_string_from_cstr(const char* str);